# Parser_PDF

./: .gitignore  CHANGELOG.md  README.md  config.yaml  environment.yml  pyproject.toml  requirements.txt  run_parser.py
.github/workflows/: ci.yml
docs/: content_overlap.md  visual_debug_implementation.md  visual_debugging.md
schemas/: output_schema.json
scripts/: demo_visual_debug.py  run_with_visual_debug.py
src/: __init__.py  config.py  main.py
src/exporters/: __init__.py  json_writer.py
src/ocr/: __init__.py  ocr_pipeline.py  utils.py
src/parser/: __init__.py  chart_data.py  charts.py  content_overlap.py  parallel.py  sections.py  simple_table_extractor.py  tables.py  text_blocks.py  unified_tables.py  utils.py  visual_debug.py
tests/: analyze_json.py  test_content_overlap.py  test_parallel.py  test_schema.py  test_table_extraction.py  test_tables.py  test_text_blocks.py  test_visual_debug.py  update_json_with_tables.py
